# Nubila

./: Cargo.toml  Delphi.sln  Nubila.sln  README.md  TODO
Delphi/: Game.cs
Delphi/Delphi/: Engine.cs  Time.cs
Delphi/Delphi/Excetions/: DictionaryExcetions.cs
Delphi/Delphi/Rendering/Display/: DisplayManager.cs
Delphi/Delphi/Rendering/Shaders/: Shader.cs  ShaderProgram.cs
Delphi/Delphi/Rendering/Textures/: Texture2D.cs
Nubila/: Game.cs  Nubila.csproj  Program.cs
Nubila/Nubila/: Engine.cs  Extensions.cs  Input.cs  Time.cs
Nubila/Nubila/Entities/: Camera.cs
Nubila/Nubila/Rendering/Display/: DisplayManager.cs
Nubila/Nubila/Rendering/Models/: Material.cs  Model.cs  Octree.cs  Voxel.cs
Nubila/Nubila/Rendering/Shaders/: ComputeShader.cs  Shader.cs  (+1 more)
Nubila/Properties/: launchSettings.json
Nubila/res/Models/: octree.ply
Nubila/res/Shaders/: pixelVoxelMap.comp  voxelRender.comp
bench/: fps.csv
res/Shaders/: voxelRenderer.comp
res/model/: 4x.ply  cars.ply  octree1.ply  teapot.ply
res/shader/: benchmark.frag  pixel_paint.frag  pixel_to_voxel.frag  shader.frag  shader.vert  voxel_render.comp  voxel_shading.comp
res/shader/common/: bitwise.glsl  box.glsl  define.glsl  node_buffer.glsl  octree.glsl  rand.glsl  ray.glsl  raycast.glsl
src/: benchmark.rs  engine.rs  game.rs  input.rs  lib.rs  main.rs  mygame.rs  shader.rs  state.rs
src/core/: context.rs  engine.rs  game.rs  mod.rs  time.rs  window.rs
src/model/: chunked_allocator.rs  mod.rs  model.rs  octree.rs  voxel.rs
src/render/: camera.rs  mod.rs  screen.rs  shader.rs  vertex.rs
(+6 files in other folders)
