[package]
name = "nubila"
version = "0.1.0"
edition = "2021"

[dependencies]
cgmath = "0.18.0"
chrono = "0.4.38"
defer = "0.2.1"
fern = "0.6.2"
glium = "0.35"
glutin-winit = "0.5.0"
log = "0.4.22"
plotters = "0.3.6"

[[bin]]
name = "nubila"
path = "src/main.rs"

[features]
default = ["game"]
game = []
benchmark = []
