[package]
name = "nubila"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
cgmath = "0.18.0"
chrono = "0.4.38"
defer = "0.2.1"
fern = "0.6.2"
glium = "0.35"
glutin-winit = "0.5.0"
image = "0.25.2"
linked-hash-map = "0.5.6"
log = "0.4.22"
plotters = "0.3.6"
ply-rs = "0.1.3"
vox-format = "0.1.0"

[[bin]]
name = "nubila"
path = "src/main.rs"

[features]
default = ["game"]
game = []
benchmark = []
